ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2008-02-25 Christian Hernmarck
	- GUI:
		* Fixed #1052: postmaster email not created

2008-02-25 Christian Hernmarck
	- GUI:
		* Fixed #1068: Patch to fix icon position in WebFTP
		* Fixed #1047: alias emails not deleted
		* Fixed  #747: use of unused field mail_addr in table mail_users
		* Some smaller fixes (FTP_SHELL->CMD_SHELL, TR_MENU... missing string)

2008-02-25 Jochen Manz
	- GUI:
                * Corrected some small issues and increased the speed of the db update

2008-02-24 Christian Hernmarck
	- GUI:
		* Some small fixes: domain_statistics & some "remove this" messages

2008-02-24 Benedikt Heintel
	- ENGINE:
		* Fixed #987: error pages not created
	- GUI:
		* Fixed #294: Some small tasks/features, low priority
			-> 2. When logged in as user and there is an active support ticket, then write it with red, so the user "knows"
		* Fixed #956: Standard mail addresses created for subdomains
	- DISTS:
		* Fixed #365: (ubuntu) make all shell scripts and makefiles posix compliant
		* Fixed #818: (ubuntu) proftpd doesn't work after fresh install on ubuntu feisty
		* Fixed #992: (gentoo) logrotate throws errors when using syslog-ng

2008-02-24 Jochen Manz
	- TOOLS:
		* Fixed #871: Small CSS error in Webmail

2008-02-23 Benedikt Heintel
	- GUI:
	 	* Fixed #991: Inconsistency error in edit reseller
	- DISTS:
		* Added #1067: fix some configuration and makefile in freebsd distro

2008-02-22 Benedikt Heintel
	- CONFIGS:
		* Fixed #1064: DisplayChdir in proftpd.conf doesn't work
	- GUI:
		* Fixed #1050: Error when adding User whith Hostingplan
		* Undefined index: ISPCP_LICENSE
	- TOOLS:
		* Updated ADOdb to version 4.98


2008-02-21 Benedikt Heintel
	- GUI:
		* Trim whitespaces on login and lost password

2008-02-20 Benedikt Heintel
	- GUI:
		* Fixed Warning: Undefined index: ISPCP_LICENSE
		* Fixed design error: Update news not in red
	- SETUP:
		* Fixed #1059: ERROR: Undefined rwith! in setup
